Finalizada extração de dados de propagação do Mosaico - SRD
Closes Issue  #16

--- a/nbs/01a_connectors.ipynb
+++ b/nbs/01a_connectors.ipynb
@@ -72,7 +72,7 @@
     "        # This method returns a list of n pyodbc connection objects in parallel\n",
     "        with ThreadPoolExecutor(max_workers=n) as executor:\n",
     "            futures = [executor.submit(self.connect) for _ in range(n)]\n",
-    "            return [future.result() for future in futures]\n"
+    "            return [future.result() for future in futures]"
    ]
   },
   {
