--- a/nbs/_smp_eda.ipynb
+++ b/nbs/_smp_eda.ipynb
@@ -214,7 +214,7 @@
     "    \"NumFistel\": \"Fistel\",\n",
     "    \"NomeEntidade\": \"Entidade\",\n",
     "    \"SiglaUf\": \"UF\",\n",
-    "    \"NumEstacao\": \"Número_Estação\",\n",
+    "    \"NumEstacao\": \"Estação\",\n",
     "    \"CodMunicipio\": \"Código_Município\",\n",
     "    \"DataValidade\": \"Validade_RF\",\n",
     "    \"FreqInicialMHz\": \"Frequência_Inicial\",\n",
@@ -318,7 +318,7 @@
       " 1   Validade_RF             string\n",
       " 2   Fistel                  string\n",
       " 3   Entidade                string\n",
-      " 4   Número_Estação          string\n",
+      " 4   Estação          string\n",
       " 5   Latitude                string\n",
       " 6   Longitude               string\n",
       " 7   Frequência_Inicial      string\n",
@@ -617,8 +617,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df['Número_Estação'] = df['Número_Estação'].astype(int) \n",
-    "df = df.sort_values('Número_Estação', ignore_index=True)\n",
+    "df['Estação'] = df['Estação'].astype(int) \n",
+    "df = df.sort_values('Estação', ignore_index=True)\n",
     "df = df.astype('string')"
    ]
   },
@@ -695,7 +695,7 @@
        "      <th>Validade_RF</th>\n",
        "      <th>Fistel</th>\n",
        "      <th>Entidade</th>\n",
-       "      <th>Número_Estação</th>\n",
+       "      <th>Estação</th>\n",
        "      <th>Latitude</th>\n",
        "      <th>Longitude</th>\n",
        "      <th>Código_Município</th>\n",
@@ -973,7 +973,7 @@
        "100725     35312011  2023-04-30  50409146285  TELEFONICA BRASIL S.A.   \n",
        "90133    17012008.0  2023-04-30  50409146366  TELEFÔNICA BRASIL S.A.   \n",
        "\n",
-       "       Número_Estação    Latitude   Longitude Código_Município  UF  \\\n",
+       "       Estação    Latitude   Longitude Código_Município  UF  \\\n",
        "115192     1000853184    -4.37917   -44.66972          2111409  MA   \n",
        "82694       690399260    -2.48671   -44.24434          2111300  MA   \n",
        "99017       692276025   -0.168676  -49.982015          1502509  PA   \n",
@@ -1051,7 +1051,7 @@
       " 1   Validade_RF             143973 non-null  string\n",
       " 2   Fistel                  143973 non-null  string\n",
       " 3   Entidade                143973 non-null  string\n",
-      " 4   Número_Estação          143973 non-null  string\n",
+      " 4   Estação          143973 non-null  string\n",
       " 5   Latitude                143973 non-null  string\n",
       " 6   Longitude               143973 non-null  string\n",
       " 7   Código_Município        143973 non-null  string\n",
@@ -1929,7 +1929,7 @@
        "      <th>Validade_RF</th>\n",
        "      <th>Fistel</th>\n",
        "      <th>Entidade</th>\n",
-       "      <th>Número_Estação</th>\n",
+       "      <th>Estação</th>\n",
        "      <th>Latitude</th>\n",
        "      <th>Longitude</th>\n",
        "      <th>Código_Município</th>\n",
@@ -2082,7 +2082,7 @@
        "5759    48412023  2027-10-18  50409146366   \n",
        "12495   69272020  2023-04-30  50409428698   \n",
        "\n",
-       "                                                 Entidade Número_Estação  \\\n",
+       "                                                 Entidade Estação  \\\n",
        "13096                                          CLARO S.A.      399686924   \n",
        "134826                                            TIM S A     1013053335   \n",
        "9142                               TELEFONICA BRASIL S.A.      327608595   \n",
