--- a/nbs/_smp_uplink_teórico.ipynb
+++ b/nbs/_smp_uplink_teórico.ipynb
@@ -221,7 +221,7 @@
     "    \"NumFistel\": \"Fistel\",\n",
     "    \"NomeEntidade\": \"Entidade\",\n",
     "    \"SiglaUf\": \"UF\",\n",
-    "    \"NumEstacao\": \"Número_Estação\",\n",
+    "    \"NumEstacao\": \"Estação\",\n",
     "    \"CodMunicipio\": \"Código_Município\",\n",
     "    \"DataValidade\": \"Validade_RF\",\n",
     "    \"FreqInicialMHz\": \"Frequência_Inicial\",\n",
@@ -336,7 +336,7 @@
        "      <th>Validade_RF</th>\n",
        "      <th>Fistel</th>\n",
        "      <th>Entidade</th>\n",
-       "      <th>Número_Estação</th>\n",
+       "      <th>Estação</th>\n",
        "      <th>Latitude</th>\n",
        "      <th>Longitude</th>\n",
        "      <th>Frequência_Inicial</th>\n",
@@ -482,7 +482,7 @@
        "</div>"
       ],
       "text/plain": [
-       "           Num_Ato Validade_RF       Fistel    Entidade Número_Estação  \\\n",
+       "           Num_Ato Validade_RF       Fistel    Entidade Estação  \\\n",
        "1578194   69272020  2023-04-30  50409314250     TIM S A      683574752   \n",
        "674128   1432016.0  2027-10-18  50409314250     TIM S/A     1002916531   \n",
        "1404334   47102015  2029-12-08  50010613854     TIM S A     1009551849   \n",
@@ -556,7 +556,7 @@
       " 1   Validade_RF             string\n",
       " 2   Fistel                  string\n",
       " 3   Entidade                string\n",
-      " 4   Número_Estação          string\n",
+      " 4   Estação          string\n",
       " 5   Latitude                string\n",
       " 6   Longitude               string\n",
       " 7   Frequência_Inicial      string\n",
@@ -706,8 +706,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df['Número_Estação'] = df['Número_Estação'].astype(int) \n",
-    "df = df.sort_values('Número_Estação', ignore_index=True)\n",
+    "df['Estação'] = df['Estação'].astype(int) \n",
+    "df = df.sort_values('Estação', ignore_index=True)\n",
     "df = df.astype('string')"
    ]
   },
@@ -810,7 +810,7 @@
        "      <th>Validade_RF</th>\n",
        "      <th>Fistel</th>\n",
        "      <th>Entidade</th>\n",
-       "      <th>Número_Estação</th>\n",
+       "      <th>Estação</th>\n",
        "      <th>Latitude</th>\n",
        "      <th>Longitude</th>\n",
        "      <th>Frequência_Inicial</th>\n",
@@ -837,7 +837,7 @@
       ],
       "text/plain": [
        "Empty DataFrame\n",
-       "Columns: [Num_Ato, Validade_RF, Fistel, Entidade, Número_Estação, Latitude, Longitude, Frequência_Inicial, Frequência_Final, Frequência_Central, Código_Município, UF, Potência(W), Cod_TipoAntena, Polarização, Raio_Antena, Ganho_Antena, FC_Antena, Ang_MP_Antena, Ângulo_Elevação, Azimute, Altura_Antena, Perdas_Acessorias, Tipo_Estação, Tecnologia, Frequência_Transmissão, Frequência_Recepção, Largura_Emissão(kHz), Classe_Emissão]\n",
+       "Columns: [Num_Ato, Validade_RF, Fistel, Entidade, Estação, Latitude, Longitude, Frequência_Inicial, Frequência_Final, Frequência_Central, Código_Município, UF, Potência(W), Cod_TipoAntena, Polarização, Raio_Antena, Ganho_Antena, FC_Antena, Ang_MP_Antena, Ângulo_Elevação, Azimute, Altura_Antena, Perdas_Acessorias, Tipo_Estação, Tecnologia, Frequência_Transmissão, Frequência_Recepção, Largura_Emissão(kHz), Classe_Emissão]\n",
        "Index: []\n",
        "\n",
        "[0 rows x 29 columns]"
@@ -961,7 +961,7 @@
       " 1   Validade_RF             147555 non-null  string \n",
       " 2   Fistel                  147555 non-null  string \n",
       " 3   Entidade                147555 non-null  string \n",
-      " 4   Número_Estação          147555 non-null  string \n",
+      " 4   Estação          147555 non-null  string \n",
       " 5   Latitude                147555 non-null  string \n",
       " 6   Longitude               147555 non-null  string \n",
       " 7   Código_Município        147555 non-null  string \n",
@@ -2139,7 +2139,7 @@
        "      <th>Validade_RF</th>\n",
        "      <th>Fistel</th>\n",
        "      <th>Entidade</th>\n",
-       "      <th>Número_Estação</th>\n",
+       "      <th>Estação</th>\n",
        "      <th>Latitude</th>\n",
        "      <th>Longitude</th>\n",
        "      <th>Código_Município</th>\n",
@@ -2429,7 +2429,7 @@
        "</div>"
       ],
       "text/plain": [
-       "         Num_Ato Validade_RF       Fistel    Entidade Número_Estação  \\\n",
+       "         Num_Ato Validade_RF       Fistel    Entidade Estação  \\\n",
        "0       73832008  2023-12-15  50409428698     TIM S A           1058   \n",
        "1       73832008  2023-12-15  50409428698     TIM S A           1058   \n",
        "2       73832008  2023-12-15  50409428698     TIM S A           1058   \n",
@@ -2579,7 +2579,7 @@
        "      <th>Validade_RF</th>\n",
        "      <th>Fistel</th>\n",
        "      <th>Entidade</th>\n",
-       "      <th>Número_Estação</th>\n",
+       "      <th>Estação</th>\n",
        "      <th>Latitude</th>\n",
        "      <th>Longitude</th>\n",
        "      <th>Código_Município</th>\n",
@@ -2882,7 +2882,7 @@
        "147389     43932023  2041-12-08  50440366410   \n",
        "147390    105742021  2041-12-08  50440366410   \n",
        "\n",
-       "                                          Entidade Número_Estação    Latitude  \\\n",
+       "                                          Entidade Estação    Latitude  \\\n",
        "23                          TELEFONICA BRASIL S.A.           3565   -32.03389   \n",
        "109                         TELEFONICA BRASIL S.A.           8605  -22.214036   \n",
        "135                         TELEFONICA BRASIL S.A.           8648  -22.125117   \n",
@@ -3265,7 +3265,7 @@
    "outputs": [],
    "source": [
     "smp['Status'] = 'L'\n",
-    "smp['Num_Serviço'] = '010'"
+    "smp['Serviço'] = '010'"
    ]
   },
   {
@@ -3523,7 +3523,7 @@
        "      <th>Validade_RF</th>\n",
        "      <th>Fistel</th>\n",
        "      <th>Entidade</th>\n",
-       "      <th>Número_Estação</th>\n",
+       "      <th>Estação</th>\n",
        "      <th>Latitude</th>\n",
        "      <th>Longitude</th>\n",
        "      <th>Código_Município</th>\n",
@@ -3538,7 +3538,7 @@
        "      <th>Latitude_IBGE</th>\n",
        "      <th>Longitude_IBGE</th>\n",
        "      <th>Status</th>\n",
-       "      <th>Num_Serviço</th>\n",
+       "      <th>Serviço</th>\n",
        "      <th>Município_IBGE</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -3813,7 +3813,7 @@
        "</div>"
       ],
       "text/plain": [
-       "         Num_Ato Validade_RF       Fistel    Entidade Número_Estação  \\\n",
+       "         Num_Ato Validade_RF       Fistel    Entidade Estação  \\\n",
        "0       73832008  2023-12-15  50409428698     TIM S A           1058   \n",
        "1       73832008  2023-12-15  50409428698     TIM S A           1058   \n",
        "2       73832008  2023-12-15  50409428698     TIM S A           1058   \n",
@@ -3852,7 +3852,7 @@
        "147553        Downlink   45.0     847.75                  0      -22,2562   \n",
        "147554        Downlink   45.0     840.00                  0      -22,2562   \n",
        "\n",
-       "       Longitude_IBGE Status Num_Serviço Município_IBGE  \n",
+       "       Longitude_IBGE Status Serviço Município_IBGE  \n",
        "0            -35,7139      L         010      Flexeiras  \n",
        "1            -35,7139      L         010      Flexeiras  \n",
        "2            -35,7139      L         010      Flexeiras  \n",
