--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -133,7 +133,7 @@
        "      <th>Frequência</th>\n",
        "      <th>Entidade</th>\n",
        "      <th>Fistel</th>\n",
-       "      <th>Número_Estação</th>\n",
+       "      <th>Estação</th>\n",
        "      <th>Município</th>\n",
        "      <th>Código_Município</th>\n",
        "    </tr>\n",
@@ -196,7 +196,7 @@
        "3169      104.9  ASSOCIAÇÃO COMUNITÁRIA EDUCATIVA DE JURAMENTO ...   \n",
        "457        87.9  ASSOCIAÇÃO COMUNITÁRIA E DE COMUNICAÇÃO SOCIAL...   \n",
        "\n",
-       "           Fistel Número_Estação         Município Código_Município  \n",
+       "           Fistel Estação         Município Código_Município  \n",
        "3168  50012640301      682812145            Joaíma          3136009  \n",
        "3345  50013713175      683836722  Pontes e Lacerda          5106752  \n",
        "4433  50013423096      683549529           Guarará          3128501  \n",
@@ -274,7 +274,7 @@
     "* `Frequência`: Frequência de Transmissão da Estação\n",
     "* `Entidade`: Nome da Pessoa (Física | Jurídica) detentora da Outorga\n",
     "* `Fistel`: Código itentificador da Outorga de Serviço, um Fistel pode conter uma ou mais estações\n",
-    "* `Número_Estação`: Código Identificador da Estação - Código não necessáriamente único, por vezes uma única estação possui diversos transmissores com características distintas\n",
+    "* `Estação`: Código Identificador da Estação - Código não necessáriamente único, por vezes uma única estação possui diversos transmissores com características distintas\n",
     "* `Município`: Município de Outorga daquela estação\n",
     "* `Código_Município`: Código único do IBGE identificando univocamente o município, esse código é utilizado para validar a localização das coordenadas da estação\n",
     "* `UF`: Unidade Federativa ( Estado )\n",
@@ -310,7 +310,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* `Num_Serviço`: Número identificador do serviço, no caso de `RADCOM` o valor é único: `231`\n",
+    "* `Serviço`: Número identificador do serviço, no caso de `RADCOM` o valor é único: `231`\n",
     "* `Classe_Emissão`: Dado ausente na base de `RADCOM` , inserido valores únicos nulos para normalizar com as demais bases\n",
     "* `Largura_Emissão(kHz)`: Largura de Banda da Emissão em kHz. Nessa coluna é imputado o valor de `256`, valor padrão para o serviço FM.\n",
     "* `Validade_RF`: Dado ausente na base de `RADCOM` , inserido valores únicos nulos para normalizar com as demais bases\n",
@@ -381,7 +381,7 @@
        "      <th></th>\n",
        "      <th>Frequência</th>\n",
        "      <th>Entidade</th>\n",
-       "      <th>Número_Estação</th>\n",
+       "      <th>Estação</th>\n",
        "      <th>Município</th>\n",
        "      <th>Latitude</th>\n",
        "      <th>Longitude</th>\n",
@@ -615,7 +615,7 @@
        "4785      105.9  ASSOCIAÇÃO DE DESENVOLVIMENTO CULTURAL, ARTÍST...   \n",
        "4878      106.3  Associação Comunitária de Desenvolvimento Artí...   \n",
        "\n",
-       "     Número_Estação               Município   Latitude  Longitude  \n",
+       "     Estação               Município   Latitude  Longitude  \n",
        "64        691861544  São Francisco de Paula -50.572500 -29.446389  \n",
        "327      1010974570                Ipecaetá  -0.205286  -0.655050  \n",
        "470       695516850           Boa Esperança -36.535556 -79.833889  \n",
@@ -650,7 +650,7 @@
     "df[['Latitude', 'Longitude']] = df[['Latitude', 'Longitude']].astype('float')\n",
     "bad = df[~(df.Latitude.between(MIN_LAT, MAX_LAT) & df.Longitude.between(MIN_LONG, MAX_LONG))]\n",
     "print(\"Exemplo de coordenadas incorretas, fora dos limites do Brasil: \")\n",
-    "bad.loc[:, ['Frequência', 'Entidade', 'Número_Estação', 'Município', 'Latitude', 'Longitude']]"
+    "bad.loc[:, ['Frequência', 'Entidade', 'Estação', 'Município', 'Latitude', 'Longitude']]"
    ]
   },
   {
@@ -690,7 +690,7 @@
        "      <th>Frequência</th>\n",
        "      <th>Entidade</th>\n",
        "      <th>Fistel</th>\n",
-       "      <th>Número_Estação</th>\n",
+       "      <th>Estação</th>\n",
        "      <th>Município</th>\n",
        "      <th>Código_Município</th>\n",
        "    </tr>\n",
@@ -753,7 +753,7 @@
        "7963       156.5                   HDG SERVICOS AMBIENTAIS LTDA  50405428871   \n",
        "24272      902.6                   UNIVERSIDADE FEDERAL DO PARA  50412323184   \n",
        "\n",
-       "      Número_Estação               Município Código_Município  \n",
+       "      Estação               Município Código_Município  \n",
        "16415     1008756757                  Santos          3548500  \n",
        "25728     1006864110                   Acará          1500206  \n",
        "21282     1002823339        União da Vitória          4128203  \n",
@@ -850,7 +850,7 @@
    "metadata": {},
    "source": [
     "* `Classe`: String que identifica o tipo de estação , e.g `Fixa Aeronáutica`, `Fixa Base`, `Móvel`, `Transmissora` etc...\n",
-    "* `Num_Serviço`: Código que identifica o Serviço Outorgado na Anatel, aqui existem diversos serviços: `604, 035, 507, 019` \n",
+    "* `Serviço`: Código que identifica o Serviço Outorgado na Anatel, aqui existem diversos serviços: `604, 035, 507, 019` \n",
     "* `Validade_RF`: Data de Validade da Radiofrequência\n"
    ]
   },
@@ -948,7 +948,7 @@
        "      <th></th>\n",
        "      <th>Frequência</th>\n",
        "      <th>Entidade</th>\n",
-       "      <th>Número_Estação</th>\n",
+       "      <th>Estação</th>\n",
        "      <th>Município</th>\n",
        "      <th>Latitude</th>\n",
        "      <th>Longitude</th>\n",
@@ -1149,7 +1149,7 @@
        "</div>"
       ],
       "text/plain": [
-       "      Frequência                            Entidade Número_Estação  \\\n",
+       "      Frequência                            Entidade Estação  \\\n",
        "1985     131.875  AZUL LINHAS AEREAS BRASILEIRAS S.A     1009302628   \n",
        "2874      153.57            RADIO SAO CARLOS LTDA.ME        3570061   \n",
        "2966      153.57            RADIO SAO CARLOS LTDA.ME        3570070   \n",
@@ -1206,7 +1206,7 @@
     "df[['Latitude', 'Longitude']] = df[['Latitude', 'Longitude']].astype('float')\n",
     "bad = df[~(df.Latitude.between(MIN_LAT, MAX_LAT) & df.Longitude.between(MIN_LONG, MAX_LONG))]\n",
     "print(\"Exemplo de coordenadas incorretas, fora dos limites do Brasil: \")\n",
-    "bad.loc[:, ['Frequência', 'Entidade', 'Número_Estação', 'Município', 'Latitude', 'Longitude']]"
+    "bad.loc[:, ['Frequência', 'Entidade', 'Estação', 'Município', 'Latitude', 'Longitude']]"
    ]
   },
   {
@@ -1246,7 +1246,7 @@
        "      <th>Frequência</th>\n",
        "      <th>Entidade</th>\n",
        "      <th>Fistel</th>\n",
-       "      <th>Número_Estação</th>\n",
+       "      <th>Estação</th>\n",
        "      <th>Município</th>\n",
        "      <th>Código_Município</th>\n",
        "    </tr>\n",
@@ -1309,7 +1309,7 @@
        "16758       97.3                      VALE COMUNICAÇÕES LTDA  50401377539   \n",
        "8657       479.0         RADIO E TELEVISAO BANDEIRANTES LTDA  50416827802   \n",
        "\n",
-       "      Número_Estação         Município Código_Município  \n",
+       "      Estação         Município Código_Município  \n",
        "6157       323090346             Seara          4217501  \n",
        "23822     1013206573          Pitangui          3151404  \n",
        "1588         5591031      Nova Venécia          3203908  \n",
@@ -1464,7 +1464,7 @@
        "      <th></th>\n",
        "      <th>Frequência</th>\n",
        "      <th>Entidade</th>\n",
-       "      <th>Número_Estação</th>\n",
+       "      <th>Estação</th>\n",
        "      <th>Município</th>\n",
        "      <th>Latitude</th>\n",
        "      <th>Longitude</th>\n",
@@ -1589,7 +1589,7 @@
        "31008      503.0                  PREFEITURA MUNICIPAL DE SAO TIAGO   \n",
        "31009      491.0               PREFEITURA MUNICIPAL DE CAMPOS ALTOS   \n",
        "\n",
-       "      Número_Estação                   Município  Latitude  Longitude  \n",
+       "      Estação                   Município  Latitude  Longitude  \n",
        "0               <NA>             Cruzeiro do Sul       NaN        NaN  \n",
        "1               <NA>                 Mâncio Lima       NaN        NaN  \n",
        "16              <NA>                Caldas Novas       NaN        NaN  \n",
@@ -1615,7 +1615,7 @@
     "df[['Latitude', 'Longitude']] = df[['Latitude', 'Longitude']].astype('float')\n",
     "bad = df[~(df.Latitude.between(MIN_LAT, MAX_LAT) & df.Longitude.between(MIN_LONG, MAX_LONG))]\n",
     "print(\"Exemplo de coordenadas incorretas ou ausentes: \")\n",
-    "bad.loc[:, ['Frequência', 'Entidade', 'Número_Estação', 'Município', 'Latitude', 'Longitude']]"
+    "bad.loc[:, ['Frequência', 'Entidade', 'Estação', 'Município', 'Latitude', 'Longitude']]"
    ]
   },
   {
@@ -1655,7 +1655,7 @@
        "      <th>Frequência</th>\n",
        "      <th>Entidade</th>\n",
        "      <th>Fistel</th>\n",
-       "      <th>Número_Estação</th>\n",
+       "      <th>Estação</th>\n",
        "      <th>Município</th>\n",
        "      <th>Código_Município</th>\n",
        "    </tr>\n",
@@ -1718,7 +1718,7 @@
        "492247      14.76                                         CLARO S.A.   \n",
        "146266     383.65               CSP - COMPANHIA SIDERURGICA DO PECEM   \n",
        "\n",
-       "             Fistel Número_Estação                Município Código_Município  \n",
+       "             Fistel Estação                Município Código_Município  \n",
        "467215  50001197975     1014986777               Rio Grande          4315602  \n",
        "561127  06030093525      691968292                     <NA>          2914307  \n",
        "147545  50405704062     1003279950                                   4317301  \n",
@@ -1822,7 +1822,7 @@
     "    * Processamento de cada string `Emissão` concatenada nas duas partes atômicas: `Largura_Emissão` e `Classe_Emissão`\n",
     "\n",
     "* `Multiplicidade`: Contador do número de estações similares:\n",
-    "    * Existem registros com todas as características anteriores idênticas, exceto o `Número_Estação` por exemplo. \n",
+    "    * Existem registros com todas as características anteriores idênticas, exceto o `Estação` por exemplo. \n",
     "    * Estações possuem detalhes técnicos que não são considerados relevantes, pelo menos no escopo atual, para a Análise Espectral e Identificação de Emissões - como por exemplo:\n",
     "        * Tipo de Antena\n",
     "        * Polarização: Horizontal ou Vertical.\n",
@@ -2306,7 +2306,7 @@
        "      <th>Frequência</th>\n",
        "      <th>Entidade</th>\n",
        "      <th>Fistel</th>\n",
-       "      <th>Número_Estação</th>\n",
+       "      <th>Estação</th>\n",
        "      <th>Município</th>\n",
        "      <th>Código_Município</th>\n",
        "    </tr>\n",
@@ -2369,7 +2369,7 @@
        "477613      407.1                  Oi S.a. - em Recuperacao Judicial   \n",
        "739091     149.33                PREFEITURA DO MUNICIPIO DE VALINHOS   \n",
        "\n",
-       "             Fistel Número_Estação Município Código_Município  \n",
+       "             Fistel Estação Município Código_Município  \n",
        "176758  50411716298     1000516528                    3146107  \n",
        "788342  11030016470      684830337                    1100205  \n",
        "92400   50403650801     1002539185                    1302603  \n",
@@ -2440,7 +2440,7 @@
     "* Arquivo base com os dados da Anatel com as seguintes colunas:\n",
     "    * `Frequência`\n",
     "    * `Número_Serviço`\n",
-    "    * `Número_Estação`\n",
+    "    * `Estação`\n",
     "    * `Classe_Emissão`\n",
     "    * `Largura_Emissão(kHz)`\n",
     "* Para simplificação de como os dados são apresentados, é criada a coluna `Descrição` com as seguintes colunas aglutinadas:\n",
@@ -2449,7 +2449,7 @@
     "    * `Classe`\n",
     "    * `Entidade`\n",
     "    * `Fistel`\n",
-    "    * `#Estação` - `Número_Estação`+ `Multiplicidade`\n",
+    "    * `#Estação` - `Estação`+ `Multiplicidade`\n",
     "    * `Município_IBGE`\n",
     "    * `UF`    \n",
     "    A coluna `Município` é substituída pela coluna `Município_IBGE`, por esta estar completa e validada através do `Código_Município`\n",
