--- a/nbs/_smp.ipynb
+++ b/nbs/_smp.ipynb
@@ -105,7 +105,7 @@
     "    \"NumFistel\": \"Fistel\",\n",
     "    \"NomeEntidade\": \"Entidade\",\n",
     "    \"SiglaUf\": \"UF\",\n",
-    "    \"NumEstacao\": \"Número_Estação\",\n",
+    "    \"NumEstacao\": \"Estação\",\n",
     "    \"CodMunicipio\": \"Código_Município\",\n",
     "    \"DataValidade\": \"Validade_RF\",\n",
     "    # \"FreqInicialMHz\": \"Frequência_Inicial\",\n",
