Efetuando testes para conversão de tipos do dataframe

--- a/nbs/04_estacoes.ipynb
+++ b/nbs/04_estacoes.ipynb
@@ -136,8 +136,8 @@
     "\t\t\t'telecom': Telecom(self.mongo_uri, self.limit),\n",
     "\t\t\t'smp': SMP(self.mongo_uri, self.limit),\n",
     "\t\t\t'srd': SRD(self.mongo_uri, self.limit),\n",
-    "\t\t\t'stel': Stel(self.sql_params),\n",
-    "\t\t\t'radcom': Radcom(self.sql_params),\n",
+    "\t\t\t# 'stel': Stel(self.sql_params),\n",
+    "\t\t\t# 'radcom': Radcom(self.sql_params),\n",
     "\t\t\t'aero': Aero(),\n",
     "\t\t}\n",
     "\n",
@@ -238,7 +238,11 @@
     "\t\t\t\t  \"\"\"\n",
     "\t\t\tself.register_log(gdf, log, check_coords)\n",
     "\n",
-    "\t\t\tgdf.drop(['Código_Município', 'Município', 'UF'], axis=1, inplace=True)\n",
+    "\t\t\tgdf.drop(\n",
+    "\t\t\t\t['Código_Município', 'Município', 'UF', 'geometry', 'AREA_KM2'],\n",
+    "\t\t\t\taxis=1,\n",
+    "\t\t\t\tinplace=True,\n",
+    "\t\t\t)\n",
     "\n",
     "\t\tgdf.rename(\n",
     "\t\t\tcolumns={\n",
@@ -286,29 +290,45 @@
     "\n",
     "\t@staticmethod\n",
     "\tdef _cast2float(column: pd.Series) -> pd.Series:\n",
-    "\t\treturn pd.to_numeric(column, downcast='float', errors='coerce', dtype_backend='pyarrow')\n",
+    "\t\treturn pd.to_numeric(\n",
+    "\t\t\tcolumn, downcast='float', errors='coerce', dtype_backend='pyarrow'\n",
+    "\t\t).fillna(-1.0)\n",
     "\n",
     "\t@staticmethod\n",
     "\tdef _cast2int(column: pd.Series) -> pd.Series:\n",
-    "\t\treturn pd.to_numeric(column, downcast='integer', errors='coerce', dtype_backend='pyarrow')\n",
+    "\t\treturn pd.to_numeric(\n",
+    "\t\t\tcolumn, downcast='integer', errors='coerce', dtype_backend='pyarrow'\n",
+    "\t\t).fillna(-1)\n",
     "\n",
     "\t@staticmethod\n",
     "\tdef _cast2str(column: pd.Series) -> pd.Series:\n",
-    "\t\treturn column.astype('string', copy=False)\n",
+    "\t\tcolumn.replace('', '-1', inplace=True)\n",
+    "\t\treturn column.astype('string', copy=False).fillna('-1')\n",
     "\n",
     "\t@staticmethod\n",
     "\tdef _cast2cat(column: pd.Series) -> pd.Series:\n",
-    "\t\treturn column.astype('category', copy=False)\n",
+    "\t\tcolumn.replace('', '-1', inplace=True)\n",
+    "\t\treturn column.fillna('-1').astype('category', copy=False)\n",
     "\n",
     "\t@staticmethod\n",
     "\tdef _remove_invalid_frequencies(df):\n",
-    "\t\tvalid_range = df['Frequência'] <= LIMIT_FREQ\n",
+    "\t\tdf.sort_values(['Frequência', 'Latitude', 'Longitude'], ignore_index=True, inplace=True)\n",
+    "\t\treturn df[df['Frequência'] <= LIMIT_FREQ]\n",
     "\t\t# TODO: save to discarded and log\n",
     "\t\t# log = f\"\"\"[(\"Colunas\", \"Frequência\"),\n",
     "\t\t# \t\t   (\"Processamento\", \"Frequência Inválida: Maior que {LIMIT_FREQ}\")\n",
     "\t\t# \t\t  \"\"\"\n",
     "\t\t# self.register_log(df, log, check_coords)\n",
-    "\t\treturn df.loc[valid_range]\n",
+    "\n",
+    "\t@staticmethod\n",
+    "\tdef _format_types(df):\n",
+    "\t\tcols = ['Frequência', 'Latitude', 'Longitude']\n",
+    "\t\tfor col in cols:\n",
+    "\t\t\tdf[col] = Estacoes._cast2float(df[col])\n",
+    "\t\tfor col in df.columns:\n",
+    "\t\t\tif col not in cols:\n",
+    "\t\t\t\tdf[col] = Estacoes._cast2cat(df[col])\n",
+    "\t\treturn df\n",
     "\n",
     "\tdef _format(\n",
     "\t\tself,\n",
@@ -318,11 +338,10 @@
     "\t\tanatel = pd.concat(dfs, ignore_index=True)\n",
     "\t\tdf = merge_on_frequency(anatel, aero)\n",
     "\t\tdf = self.validate_coordinates(df)\n",
-    "\t\tdf = self._simplify_sources(df)\n",
-    "\t\tfor col in ['Frequência', 'Latitude', 'Longitude']:\n",
-    "\t\t\tdf[col] = self._cast2float(df[col])\n",
-    "\t\tdf.sort_values(['Frequência', 'Latitude', 'Longitude'], ignore_index=True, inplace=True)\n",
-    "\t\tdf = self._remove_invalid_frequencies(df)\n",
+    "\t\tdf = Estacoes._simplify_sources(df)\n",
+    "\t\tdf = Estacoes._format_types(df)\n",
+    "\t\tdf = Estacoes._remove_invalid_frequencies(df)\n",
+    "\t\tdf = Estacoes._format_types(df)\n",
     "\t\treturn df.loc[:, self.columns]"
    ]
   }
