Remoção de todos os pontos de casting, dropping e sorting espalhados nos módulos

--- a/nbs/01b_base.ipynb
+++ b/nbs/01b_base.ipynb
@@ -109,12 +109,9 @@
     "        self, df: pd.DataFrame, folder: Union[str, Path], stem: str\n",
     "    ) -> pd.DataFrame:\n",
     "        \"\"\"Format, Save and return a dataframe\"\"\"\n",
-    "        df = df.astype(\"string[pyarrow]\").drop_duplicates(\n",
-    "            keep=\"first\", ignore_index=True\n",
-    "        )\n",
     "        try:\n",
     "            file = Path(f\"{folder}/{stem}.parquet.gzip\")\n",
-    "            df.to_parquet(file, compression=\"gzip\", index=False)\n",
+    "            df.to_parquet(file, compression=\"gzip\", index=False, engine=\"pyarrow\")\n",
     "        except (ArrowInvalid, ArrowTypeError) as e:\n",
     "            raise e(f\"Não foi possível salvar o arquivo parquet {file}\") from e\n",
     "        return df\n",
