--- a/nbs/03_aero.ipynb
+++ b/nbs/03_aero.ipynb
@@ -113,7 +113,7 @@
     "        radares = pd.read_csv(Path(__file__).parent / \"arquivos\" / \"radares.csv\")\n",
     "        radares[\"Fonte\"] = \"RADAR\"\n",
     "        sources = [get_icao, get_aisw, get_aisg, get_redemet]\n",
-    "        dfs = parallel(func, sources, threadpool=True, progress=True)\n",
+    "        dfs = parallel(func, sources, threadpool=True, progress=False)\n",
     "        dfs.append(radares)\n",
     "        return dfs\n",
     "\n",
@@ -142,6 +142,7 @@
     "            )\n",
     "            icao.loc[np.isclose(icao.Longitude, -472.033447), \"Longitude\"] = -47.2033447\n",
     "            icao.loc[np.isclose(icao.Longitude, 69.934998), \"Longitude\"] = -69.934998\n",
+    "            icao[\"Multiplicidade\"] = 1\n",
     "            return icao"
    ]
   }
