--- a/nbs/01f_telecom.ipynb
+++ b/nbs/01f_telecom.ipynb
@@ -46,11 +46,11 @@
     "from dotenv import find_dotenv, load_dotenv\n",
     "\n",
     "from extracao.constants import (\n",
-    "\tAGG_LICENCIAMENTO,\n",
-    "\tCOLUNAS,\n",
-    "\tDICT_LICENCIAMENTO,\n",
-    "\tMONGO_TELECOM,\n",
-    "\tPROJECTION_LICENCIAMENTO,\n",
+    "    AGG_LICENCIAMENTO,\n",
+    "    COLUNAS,\n",
+    "    DICT_LICENCIAMENTO,\n",
+    "    MONGO_TELECOM,\n",
+    "    PROJECTION_LICENCIAMENTO,\n",
     ")\n",
     "\n",
     "from extracao.datasources.mosaico import Mosaico"
@@ -96,7 +96,7 @@
    "source": [
     "#| export\n",
     "\n",
-    "MONGO_URI = os.environ.get('MONGO_URI')\n"
+    "MONGO_URI = os.environ.get(\"MONGO_URI\")"
    ]
   },
   {
@@ -107,69 +107,71 @@
    "source": [
     "#| export\n",
     "class Telecom(Mosaico):\n",
-    "\t\"\"\"Extração e Processamento dos serviços de Telecomunições distintos de SMP\"\"\"\n",
+    "    \"\"\"Extração e Processamento dos serviços de Telecomunições distintos de SMP\"\"\"\n",
     "\n",
-    "\tdef __init__(self, mongo_uri: str = MONGO_URI, limit: int = 0) -> None:\n",
-    "\t\tsuper().__init__(mongo_uri)\n",
-    "\t\tself.limit = limit\n",
+    "    def __init__(self, mongo_uri: str = MONGO_URI, limit: int = 0) -> None:\n",
+    "        super().__init__(mongo_uri)\n",
+    "        self.limit = limit\n",
     "\n",
-    "\t@property\n",
-    "\tdef stem(self):\n",
-    "\t\treturn 'telecom'\n",
+    "    @property\n",
+    "    def stem(self):\n",
+    "        return \"telecom\"\n",
     "\n",
-    "\t@property\n",
-    "\tdef collection(self):\n",
-    "\t\treturn 'licenciamento'\n",
+    "    @property\n",
+    "    def collection(self):\n",
+    "        return \"licenciamento\"\n",
     "\n",
-    "\t@property\n",
-    "\tdef query(self):\n",
-    "\t\treturn MONGO_TELECOM\n",
+    "    @property\n",
+    "    def query(self):\n",
+    "        return MONGO_TELECOM\n",
     "\n",
-    "\t@property\n",
-    "\tdef projection(self):\n",
-    "\t\treturn PROJECTION_LICENCIAMENTO\n",
+    "    @property\n",
+    "    def projection(self):\n",
+    "        return PROJECTION_LICENCIAMENTO\n",
     "\n",
-    "\t@property\n",
-    "\tdef columns(self):\n",
-    "\t\treturn COLUNAS\n",
+    "    @property\n",
+    "    def columns(self):\n",
+    "        return COLUNAS\n",
     "\n",
-    "\t@property\n",
-    "\tdef cols_mapping(self):\n",
-    "\t\treturn DICT_LICENCIAMENTO\n",
+    "    @property\n",
+    "    def cols_mapping(self):\n",
+    "        return DICT_LICENCIAMENTO\n",
     "\n",
-    "\tdef extraction(self) -> pd.DataFrame:\n",
-    "\t\tpipeline = [{'$match': self.query}, {'$project': self.projection}]\n",
-    "\t\tif self.limit > 0:\n",
-    "\t\t\tpipeline.append({'$limit': self.limit})\n",
-    "\t\tdf = self._extract(self.collection, pipeline)\n",
-    "\t\tdf['Log'] = ''\n",
-    "\t\treturn df\n",
+    "    def extraction(self) -> pd.DataFrame:\n",
+    "        pipeline = [{\"$match\": self.query}, {\"$project\": self.projection}]\n",
+    "        if self.limit > 0:\n",
+    "            pipeline.append({\"$limit\": self.limit})\n",
+    "        df = self._extract(self.collection, pipeline)\n",
+    "        df[\"Log\"] = \"\"\n",
+    "        return df\n",
     "\n",
-    "\tdef _format(\n",
-    "\t\tself,\n",
-    "\t\tdf: pd.DataFrame,  # DataFrame com os dados de Estações e Plano_Básico mesclados\n",
-    "\t) -> pd.DataFrame:  # DataFrame com os dados mesclados e limpos\n",
-    "\t\t\"\"\"Clean the merged dataframe with the data from the MOSAICO page\"\"\"\n",
-    "\t\tdf = df.rename(columns=self.cols_mapping)\n",
-    "\t\tdf = self.split_designacao(df)\n",
-    "\t\tduplicated = df.duplicated(subset=AGG_LICENCIAMENTO, keep='first')\n",
-    "\t\tdf_sub = df[~duplicated].reset_index(drop=True)\n",
-    "\t\t# discarded = df[duplicated].reset_index(drop=True)\n",
-    "\t\t# log = f\"\"\"[(\"Colunas\", {AGG_LICENCIAMENTO}),\n",
-    "\t\t# (\"Processamento\", \"Registro agrupado e descartado do arquivo final\")]\"\"\"\n",
-    "\t\t# self.append2discarded(self.register_log(discarded, log))\n",
-    "\t\t# del discarded\n",
-    "\t\t# gc.collect()\n",
-    "\t\t# .count() drop the NaN from the subset, not keeping them\n",
-    "\t\tdf_sub.dropna(subset=AGG_LICENCIAMENTO, inplace=True)\n",
-    "\t\tdf_sub['Multiplicidade'] = (\n",
-    "\t\t\tdf.groupby(AGG_LICENCIAMENTO, dropna=True, sort=False, observed=True).size().values\n",
-    "\t\t)\n",
-    "\t\tlog = f'[(\"Colunas\", {AGG_LICENCIAMENTO}), (\"Processamento\", \"Agrupamento\")]'\n",
-    "\t\tdf_sub = self.register_log(df_sub, log, df_sub.Multiplicidade > 1)\n",
-    "\t\tdf_sub['Status'] = 'L'\n",
-    "\t\tdf_sub['Fonte'] = 'MOSAICO-LICENCIAMENTO'\n",
-    "\t\treturn df_sub.loc[:, self.columns]"
+    "    def _format(\n",
+    "        self,\n",
+    "        df: pd.DataFrame,  # DataFrame com os dados de Estações e Plano_Básico mesclados\n",
+    "    ) -> pd.DataFrame:  # DataFrame com os dados mesclados e limpos\n",
+    "        \"\"\"Clean the merged dataframe with the data from the MOSAICO page\"\"\"\n",
+    "        df = df.rename(columns=self.cols_mapping)\n",
+    "        df = self.split_designacao(df)\n",
+    "        duplicated = df.duplicated(subset=AGG_LICENCIAMENTO, keep=\"first\")\n",
+    "        df_sub = df[~duplicated].reset_index(drop=True)\n",
+    "        # discarded = df[duplicated].reset_index(drop=True)\n",
+    "        # log = f\"\"\"[(\"Colunas\", {AGG_LICENCIAMENTO}),\n",
+    "        # (\"Processamento\", \"Registro agrupado e descartado do arquivo final\")]\"\"\"\n",
+    "        # self.append2discarded(self.register_log(discarded, log))\n",
+    "        # del discarded\n",
+    "        # gc.collect()\n",
+    "        # .count() drop the NaN from the subset, not keeping them\n",
+    "        df_sub.dropna(subset=AGG_LICENCIAMENTO, inplace=True)\n",
+    "        df_sub[\"Multiplicidade\"] = (\n",
+    "            df.groupby(AGG_LICENCIAMENTO, dropna=True, sort=False, observed=True)\n",
+    "            .size()\n",
+    "            .values\n",
+    "        )\n",
+    "        log = f'[(\"Colunas\", {AGG_LICENCIAMENTO}), (\"Processamento\", \"Agrupamento\")]'\n",
+    "        df_sub = self.register_log(df_sub, log, df_sub.Multiplicidade > 1)\n",
+    "        df_sub[\"Status\"] = \"L\"\n",
+    "        df_sub[\"Fonte\"] = \"MOSAICO-LICENCIAMENTO\"\n",
+    "        return df_sub.loc[:, self.columns]"
    ]
   }
  ],
