--- a/nbs/02b_aisweb.ipynb
+++ b/nbs/02b_aisweb.ipynb
@@ -174,7 +174,7 @@
     "            self.type_aero,\n",
     "            n_workers=1,\n",
     "            pause=0.1,\n",
-    "            progress=True,\n",
+    "            progress=False,\n",
     "            threadpool=True,\n",
     "        )\n",
     "        return pd.concat(airports)\n",
@@ -284,8 +284,7 @@
     "            self.airports.AeroCode,\n",
     "            threadpool=True,\n",
     "            n_workers=20,\n",
-    "            # pause=0.1,\n",
-    "            progress=True,\n",
+    "            progress=False,\n",
     "        )\n",
     "        df = pd.concat(records).astype(\"string\")\n",
     "        df[\"Fonte\"] = \"AISWEB\"\n",
