Remoção de bug na função merge_on_frequency
Ao realizar o outer_join, ao filtrar os subconjuntos de dados disjuntos havia um bug que seleciona colunas do conjunto da esquerda no filtro do dataframe da direita. Isso não foi identificado na mesclagem somente de dados aeronáuticos porque esta contém as mesmas colunas. Esse bug ocorre para conjuntos com colunas distintas como anatel e aeronáutica

--- a/nbs/00b_format.ipynb
+++ b/nbs/00b_format.ipynb
@@ -254,7 +254,7 @@
     "\t\"\"\"\n",
     "\tdf_left = df_left.astype('string[pyarrow]').drop_duplicates(ignore_index=True)\n",
     "\tdf_right = df_right.astype('string[pyarrow]').drop_duplicates(ignore_index=True)\n",
-    "\tdf: pd.DataFrame = pd.merge(\n",
+    "\tdf = pd.merge(\n",
     "\t\tdf_left,\n",
     "\t\tdf_right,\n",
     "\t\ton=on,\n",
@@ -275,18 +275,14 @@
     "\tif df[both].empty:\n",
     "\t\treturn pd.concat([df_left, df_right], ignore_index=True)\n",
     "\n",
-    "\tleft_cols = [c for c in df.columns if right_suffix not in c]\n",
-    "\tright_cols = [c for c in df.columns if left_suffix not in c]\n",
+    "\tonly_left = df[left_only].copy()\n",
+    "\tonly_left = only_left.iloc[:, : len(df_left.columns)]\n",
+    "\tonly_left.columns = df_left.columns\n",
     "\n",
-    "\tonly_left = (\n",
-    "\t\tdf.loc[left_only, left_cols].copy().drop_duplicates(subset=left_cols, ignore_index=True)\n",
-    "\t)\n",
-    "\tonly_left.columns = [c.replace(left_suffix, '') for c in left_cols]\n",
-    "\n",
-    "\tonly_right = (\n",
-    "\t\tdf.loc[right_only, right_cols].copy().drop_duplicates(subset=right_cols, ignore_index=True)\n",
-    "\t)\n",
-    "\tonly_right.columns = [c.replace(right_suffix, '') for c in right_cols]\n",
+    "\tonly_right = df[right_only].copy()\n",
+    "\tonly_right_cols = listify(on) + df.columns[len(df_left.columns) :].to_list()\n",
+    "\tonly_right = only_right.loc[:, only_right_cols]\n",
+    "\tonly_right.columns = df_right.columns\n",
     "\n",
     "\tintersection_left = len(df_left) - len(only_left)\n",
     "\tintersection_right = len(df_right) - len(only_right)\n",
