Test after debug of merge_on_frequency

--- a/nbs/02b_aisweb.ipynb
+++ b/nbs/02b_aisweb.ipynb
@@ -169,15 +169,7 @@
     "        self,\n",
     "    ) -> pd.DataFrame:  # DataFrame com os dados de aeroportos\n",
     "        \"\"\"Retorna a lista de aeroportos\"\"\"\n",
-    "        airports = parallel(\n",
-    "            self.request_aero,\n",
-    "            self.type_aero,\n",
-    "            n_workers=1,\n",
-    "            pause=0.1,\n",
-    "            progress=False,\n",
-    "            threadpool=True,\n",
-    "        )\n",
-    "        return pd.concat(airports)\n",
+    "        return pd.concat([self.request_aero(a) for a in self.type_aero])\n",
     "\n",
     "    def _parse_type(self, df):\n",
     "        df = df[df[\"@type\"].isin(TYPE)].reset_index(drop=True)\n",
@@ -284,6 +276,7 @@
     "            self.airports.AeroCode,\n",
     "            threadpool=True,\n",
     "            n_workers=20,\n",
+    "            pause=0.1,\n",
     "            progress=False,\n",
     "        )\n",
     "        df = pd.concat(records).astype(\"string\")\n",
