♻️ Added flag copy=false when casting types

--- a/nbs/00b_format.ipynb
+++ b/nbs/00b_format.ipynb
@@ -251,8 +251,8 @@
                 "\t\"\"\"Mescla os dataframes baseados na frequência\n",
                 "\tÉ assumido que as colunas de ambos uma é subconjunto ou idêntica à outra, caso contrário os filtros não irão funcionar como esperado\n",
                 "\t\"\"\"\n",
-                "\tdf_left = df_left.astype('string').drop_duplicates(ignore_index=True)\n",
-                "\tdf_right = df_right.astype('string').drop_duplicates(ignore_index=True)\n",
+                "\tdf_left = df_left.astype('string', copy=False).drop_duplicates(ignore_index=True)\n",
+                "\tdf_right = df_right.astype('string', copy=False).drop_duplicates(ignore_index=True)\n",
                 "\tdf = pd.merge(\n",
                 "\t\tdf_left,\n",
                 "\t\tdf_right,\n",
