--- a/nbs/04_estacoes.ipynb
+++ b/nbs/04_estacoes.ipynb
@@ -193,7 +193,7 @@
                 "\t\t\tdtype_backend='pyarrow',\n",
                 "\t\t)\n",
                 "\n",
-                "\t\tdf['Código_Município'] = df['Código_Município'].astype('string')\n",
+                "\t\tdf['Código_Município'] = df['Código_Município'].astype('string', copy=False)\n",
                 "\n",
                 "\t\tdf = pd.merge(\n",
                 "\t\t\tdf,\n",
@@ -474,7 +474,7 @@
                 "\t\t)\n",
                 "\n",
                 "\t\tdf = pd.merge(\n",
-                "\t\t\tdf.astype('string'),\n",
+                "\t\t\tdf.astype('string', copy=False),\n",
                 "\t\t\tmunicipios,\n",
                 "\t\t\ton='Código_Município',\n",
                 "\t\t\thow='left',\n",
@@ -734,7 +734,7 @@
                 "\t\t\tdtype_backend='pyarrow',\n",
                 "\t\t)\n",
                 "\n",
-                "\t\tdf['Código_Município'] = df['Código_Município'].astype('string')\n",
+                "\t\tdf['Código_Município'] = df['Código_Município'].astype('string', copy=False)\n",
                 "\n",
                 "\t\tdf = pd.merge(\n",
                 "\t\t\tdf,\n",
