--- a/nbs/_debug_merging.ipynb
+++ b/nbs/_debug_merging.ipynb
@@ -1959,6 +1959,10 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "name": "python",
+   "version": "3.8.18"
   }
  },
  "nbformat": 4,
